@@ -1,6 +1,13 @@
 # ChangeLog for net-misc/radvd
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/radvd/ChangeLog,v 1.3 2003/02/12 08:31:15 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/radvd/ChangeLog,v 1.4 2003/04/21 15:11:30 gmsoft Exp $
+
+*radvd-0.7.2 (21 Apr 2003)
+
+  21 Apr 2003; Guy Martin <gmsoft@gentoo.org> radvd-0.7.2-r1.ebuild, files/radvd,
+  files/digest-radvd-0.7.2-r1 :
+  Corrected ownership of /var/run/radvd. Fix #19647
+  Marked stable for x86 and hppa.
 
   02 Nov 2002; Hannes Mehnert <hannes@gentoo.org> radvd-0.7.1.ebuild:
   marked stable for x86
